noinst_LTLIBRARIES += liblua.la
liblua_la_SOURCES = \
	lua/lua-5.3.2/src/lapi.c \
	lua/lua-5.3.2/src/lauxlib.c \
	lua/lua-5.3.2/src/lbaselib.c \
	lua/lua-5.3.2/src/lbitlib.c \
	lua/lua-5.3.2/src/lcode.c \
	lua/lua-5.3.2/src/lcorolib.c \
	lua/lua-5.3.2/src/lctype.c \
	lua/lua-5.3.2/src/ldblib.c \
	lua/lua-5.3.2/src/ldebug.c \
	lua/lua-5.3.2/src/ldo.c \
	lua/lua-5.3.2/src/ldump.c \
	lua/lua-5.3.2/src/lfunc.c \
	lua/lua-5.3.2/src/lgc.c \
	lua/lua-5.3.2/src/linit.c \
	lua/lua-5.3.2/src/liolib.c \
	lua/lua-5.3.2/src/llex.c \
	lua/lua-5.3.2/src/lmathlib.c \
	lua/lua-5.3.2/src/lmem.c \
	lua/lua-5.3.2/src/loadlib.c \
	lua/lua-5.3.2/src/lobject.c \
	lua/lua-5.3.2/src/lopcodes.c \
	lua/lua-5.3.2/src/loslib.c \
	lua/lua-5.3.2/src/lparser.c \
	lua/lua-5.3.2/src/lstate.c \
	lua/lua-5.3.2/src/lstring.c \
	lua/lua-5.3.2/src/lstrlib.c \
	lua/lua-5.3.2/src/ltable.c \
	lua/lua-5.3.2/src/ltablib.c \
	lua/lua-5.3.2/src/ltm.c \
	lua/lua-5.3.2/src/lundump.c \
	lua/lua-5.3.2/src/lutf8lib.c \
	lua/lua-5.3.2/src/lvm.c \
	lua/lua-5.3.2/src/lzio.c \
	lua/lua-5.3.2/src/lua.hpp \
	lua/lua-5.3.2/src/lapi.h \
	lua/lua-5.3.2/src/lauxlib.h \
	lua/lua-5.3.2/src/lcode.h \
	lua/lua-5.3.2/src/lctype.h \
	lua/lua-5.3.2/src/ldebug.h \
	lua/lua-5.3.2/src/ldo.h \
	lua/lua-5.3.2/src/lfunc.h \
	lua/lua-5.3.2/src/lgc.h \
	lua/lua-5.3.2/src/llex.h \
	lua/lua-5.3.2/src/llimits.h \
	lua/lua-5.3.2/src/lmem.h \
	lua/lua-5.3.2/src/lobject.h \
	lua/lua-5.3.2/src/lopcodes.h \
	lua/lua-5.3.2/src/lparser.h \
	lua/lua-5.3.2/src/lprefix.h \
	lua/lua-5.3.2/src/lstate.h \
	lua/lua-5.3.2/src/lstring.h \
	lua/lua-5.3.2/src/ltable.h \
	lua/lua-5.3.2/src/ltm.h \
	lua/lua-5.3.2/src/lua.h \
	lua/lua-5.3.2/src/luaconf.h \
	lua/lua-5.3.2/src/lualib.h \
	lua/lua-5.3.2/src/lundump.h \
	lua/lua-5.3.2/src/lvm.h \
	lua/lua-5.3.2/src/lzio.h
